Set up initial page layout

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,17 @@
     <title>To-do list</title>
 </head>
 <body>
-    
+    <div id="container">
+        <div id="title">TODO</div>
+        <div id="projects-sidebar">
+            <div id="sidebar-title">Projects</div>
+            <div id="projects-list"></div>
+            <button id="add-project">Add Project</button>
+        </div>
+        <div id="content">
+            <div id="content-project-title"></div>
+            <div id="content-todo-list"></div>
+        </div>
+    </div>
 </body>
 </html>
