Add initial create project form logic

--- a/src/template.html
+++ b/src/template.html
@@ -11,11 +11,12 @@
         <div id="projects-sidebar">
             <div id="sidebar-title">Projects</div>
             <div id="projects-list"></div>
-            <button id="add-project">Add Project</button>
+            <button id="add-new-project">Add Project</button>
         </div>
         <div id="content">
             <div id="content-project-title"></div>
             <div id="content-todo-list"></div>
+            <button id="add-new-item">Add to-do item</button>
         </div>
     </div>
 </body>
