--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,7 @@
         <div id="title">TODO</div>
         <div id="projects-sidebar">
             <div id="sidebar-title">Projects</div>
-            <div id="projects-list"></div>
+            <ul id="projects-list"></ul>
             <button id="add-new-project">Add Project</button>
         </div>
         <div id="content">
