--- a/src/template.html
+++ b/src/template.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <div id="container">
-        <div id="title">TODO</div>
+        <div id="container-title">TODO</div>
         <div id="projects-sidebar">
             <div id="sidebar-title">Projects</div>
             <ul id="projects-list"></ul>
             <button id="add-new-project">Add Project</button>
         </div>
         <div id="content">
-            <div id="content-project-title"></div>
+            <div id="content-project-title">Please select a project to display to-do items.</div>
             <div id="content-todo-list"></div>
             <button id="add-new-item">Add to-do item</button>
         </div>
