Implement default project selected upon page load

--- a/src/template.html
+++ b/src/template.html
@@ -17,7 +17,7 @@
             <button id="add-new-project">Add Project</button>
         </div>
         <div id="content">
-            <div id="content-project-title">Please select a project to display to-do items.</div>
+            <div id="content-project-title"></div>
             <div id="content-todo-list"></div>
             <button id="add-new-item">Add to-do item</button>
         </div>
